<resources>
    <string name="app_name">WeeklyMileageWidget</string>
    <string name="letter_monday">M</string>
    <string name="letter_tuesday">T</string>
    <string name="letter_wednesday">W</string>
    <string name="letter_thursday">T</string>
    <string name="letter_friday">F</string>
    <string name="letter_saturday">S</string>
    <string name="letter_sunday">S</string>
    <string name="updateIntentString">UPDATE_MILEAGE_WIDGET</string>
    <string name="strava_msg">Please open the app to connect your strava account</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="transparent">Transparent</string>
    <string name="strava">Strava</string>
    <string name="polar">Polar</string>
    <string name="runs">Runs</string>
    <string name="rides">Rides</string>
    <string name="all">All Activities</string>
    <string name="strava_connect">Connect Strava Account</string>
    <string name="strava_disconnect">Disconnect Strava</string>
    <string name="values">Values</string>
    <string name="goal_volume">Distance Goal</string>
    <string name="activities">Activities</string>
    <string name="units">Units</string>
    <string name="weekStart">First Day of the Week</string>
    <string name="colors">Colors</string>
    <string name="presets">Preset Styles</string>
    <string name="background_color">Background</string>
    <string name="current_week_color">Current Week / Month</string>
    <string name="last_week_color">Last Week / Month</string>
    <string name="x_and_zero_color">Axis Labels</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="timeFrame">Time Frame</string>
</resources>
