<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="strava_category"
        android:title="Strava">

        <Preference
            android:key="strava_connect"
            android:title="@string/strava_connect"
            app:isPreferenceVisible ="true"/>

        <Preference
            android:key="strava_disconnect"
            android:title="@string/strava_disconnect"
            app:isPreferenceVisible ="true"/>

        <EditTextPreference
            android:key="strava_access_token"
            android:title="Access Token"
            android:defaultValue=""
            app:isPreferenceVisible ="false"/>

        <EditTextPreference
            android:key="strava_refresh_token"
            android:title="Refresh Token"
            android:defaultValue=""
            app:isPreferenceVisible ="false"/>

        <EditTextPreference
            android:key="strava_expires_at"
            android:title="Expires At"
            android:defaultValue="0"
            app:isPreferenceVisible ="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="data_category"
        android:title="@string/values">

        <EditTextPreference
            android:key="goal"
            android:title="@string/goal_volume"
            app:defaultValue="30"/>

        <ListPreference
            android:key="activities"
            android:title="@string/activities"
            android:entries="@array/activitiesAlias"
            android:entryValues="@array/activities"
            android:defaultValue="runs"/>

        <ListPreference
            android:key="units"
            android:title="@string/units"
            android:entries="@array/unitAlias"
            android:entryValues="@array/unit"
            android:defaultValue="kilometers"/>

        <ListPreference
            android:key="timeFrame"
            android:title="@string/timeFrame"
            android:entries="@array/timeFrameAlias"
            android:entryValues="@array/timeFrame"
            android:defaultValue="week"/>

        <ListPreference
            android:key="weekStart"
            android:title="@string/weekStart"
            android:entries="@array/weekStartAlias"
            android:entryValues="@array/weekStart"
            android:defaultValue="monday"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="colors_category"
        android:title="@string/colors">

        <ListPreference
            android:key="style"
            android:title="@string/presets"
            android:entries="@array/styleAlias"
            android:entryValues="@array/style"
            android:defaultValue="strava"/>
            />

        <com.rarepebble.colorpicker.ColorPreference
            android:key="color_background"
            android:title="@string/background_color"
            android:defaultValue="#ffffffff"
            />

        <com.rarepebble.colorpicker.ColorPreference
            android:key="color_this_week"
            android:title="@string/current_week_color"
            android:defaultValue="#fffc5200"
            />

        <com.rarepebble.colorpicker.ColorPreference
            android:key="color_last_week"
            android:title="@string/last_week_color"
            android:defaultValue="#ff555555"
            />

        <com.rarepebble.colorpicker.ColorPreference
            android:key="color_x_axis"
            android:title="@string/x_and_zero_color"
            android:defaultValue="#ffaaaaaa"
            />

        <com.rarepebble.colorpicker.ColorPreference
            android:key="color_goal"
            android:title="@string/goal_volume"
            android:defaultValue="#ffcccccc"
            />
    </PreferenceCategory>

</PreferenceScreen>
